omni/tests/goldens/types/unknown_type_14.err
tests/goldens/types/unknown_type_14.omni:1:13: error: unknown type "Mystery14"
     1 | let value14:Mystery14 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_14.omni:1:1: error: type mismatch: cannot assign int to Mystery14
     1 | let value14:Mystery14 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery14 or change the variable type to int
