omni/tests/goldens/types/unknown_type_14.omni
let value14:Mystery14 = 1
